WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305585
Crash in `WebExtensionContext::loadDeclarativeNetRequestRules`
https://bugs.webkit.org/show_bug.cgi?id=305585
Summary
Crash in `WebExtensionContext::loadDeclarativeNetRequestRules`
Charlie Wolfe
Reported
2026-01-15 11:45:51 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2026-01-15 11:45:53 PST
<
rdar://problem/164437205
>
Charlie Wolfe
Comment 2
2026-01-15 11:46:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56652
EWS
Comment 3
2026-01-15 11:55:34 PST
Committed
305661@main
(ac2067c10807): <
https://commits.webkit.org/305661@main
> Reviewed commits have been landed. Closing PR #56652 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug