Crash in `WebExtensionContext::loadDeclarativeNetRequestRules` https://bugs.webkit.org/show_bug.cgi?id=305585 rdar://164437205

Reviewed by Pascoe.

* Source/WebKit/UIProcess/Extensions/Cocoa/WebExtensionContextCocoa.mm:
(WebKit::WebExtensionContext::loadDeclarativeNetRequestRules):

Canonical link: https://commits.webkit.org/305661@main